--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,19 +1,20 @@
 .class15 {
     background-color: pink;
     font-size: large;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 .class3 {
-    font-size: x-large;
+    font-size: 24px;
 }
 
 #number2 {
     color: blue;
-    font-size: xx-large;
+    font-size: 36px;
 }
 
 #number4 {
-    background-color: greenyellow;
-    font-size: large;
+    background-color: lightgreen;
+    font-size: 24px;
     font-weight: bold;
 }
